test/typecheck/bad-empty-catch.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-exceptions
;;; ERROR: 1
(module
  (event (param i32))
  (func
    try
    catch 0
    end
  ))
(;; STDERR ;;;
out/test/typecheck/bad-empty-catch.txt:9:5: error: type mismatch in try catch, expected [] but got [i32]
    end
    ^^^
;;; STDERR ;;)
